--- a/app/src/main/res/layout/item_platillo_resume.xml
+++ b/app/src/main/res/layout/item_platillo_resume.xml
@@ -2,63 +2,59 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#f5ddc4"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
+    android:background="#a7ebe8"
+    android:layout_margin="20dp"
     android:layout_width="350dp"
-    android:layout_height="130dp">
+    android:layout_height="150dp">
 
     <ImageView
         android:id="@+id/img_platillo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="20dp"
-        android:scaleType="fitStart"
+        android:layout_width="127dp"
+        android:layout_height="114dp"
+        android:padding="10dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/plato1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/txt_descripcion"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.041"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.589" />
 
     <TextView
         android:id="@+id/txt_name"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="1dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginBottom="20dp"
         android:text="Lomo saltado"
-        android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/txt_a"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/txt_a"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@+id/txt_altura"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txt_descripcion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
+        android:layout_width="213dp"
+        android:layout_height="19dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginStart="144dp"
         android:text="Platillo tipico de Peru"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txt_a"
-        app:layout_constraintTop_toTopOf="@+id/txt_name" />
+        app:layout_constraintBottom_toBottomOf="@+id/txt_altura"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/txt_a"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:text="aaaaaaaaaaaaaaaaaaa"
-        android:textColor="#f5ddc4"
+        android:id="@+id/txt_altura"
+        android:layout_width="101dp"
+        android:layout_height="24dp"
+        android:enabled="false"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="45dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:ignore="MissingConstraints" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
