--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,65 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="seed">#3F51B5</color>
+    <color name="md_theme_light_primary">#4355B9</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#DEE0FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#00105C</color>
+    <color name="md_theme_light_secondary">#B02F00</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#FFDBD1</color>
+    <color name="md_theme_light_onSecondaryContainer">#3B0900</color>
+    <color name="md_theme_light_tertiary">#785900</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFDF9E</color>
+    <color name="md_theme_light_onTertiaryContainer">#261A00</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FAFCFF</color>
+    <color name="md_theme_light_onBackground">#001F2A</color>
+    <color name="md_theme_light_surface">#FAFCFF</color>
+    <color name="md_theme_light_onSurface">#001F2A</color>
+    <color name="md_theme_light_surfaceVariant">#E3E1EC</color>
+    <color name="md_theme_light_onSurfaceVariant">#46464F</color>
+    <color name="md_theme_light_outline">#767680</color>
+    <color name="md_theme_light_inverseOnSurface">#E1F4FF</color>
+    <color name="md_theme_light_inverseSurface">#003547</color>
+    <color name="md_theme_light_inversePrimary">#BAC3FF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#4355B9</color>
+    <color name="md_theme_light_outlineVariant">#C7C5D0</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#BAC3FF</color>
+    <color name="md_theme_dark_onPrimary">#08218A</color>
+    <color name="md_theme_dark_primaryContainer">#293CA0</color>
+    <color name="md_theme_dark_onPrimaryContainer">#DEE0FF</color>
+    <color name="md_theme_dark_secondary">#FFB5A0</color>
+    <color name="md_theme_dark_onSecondary">#5F1500</color>
+    <color name="md_theme_dark_secondaryContainer">#862200</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFDBD1</color>
+    <color name="md_theme_dark_tertiary">#FABD00</color>
+    <color name="md_theme_dark_onTertiary">#3F2E00</color>
+    <color name="md_theme_dark_tertiaryContainer">#5B4300</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFDF9E</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#001F2A</color>
+    <color name="md_theme_dark_onBackground">#BFE9FF</color>
+    <color name="md_theme_dark_surface">#001F2A</color>
+    <color name="md_theme_dark_onSurface">#BFE9FF</color>
+    <color name="md_theme_dark_surfaceVariant">#46464F</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C7C5D0</color>
+    <color name="md_theme_dark_outline">#90909A</color>
+    <color name="md_theme_dark_inverseOnSurface">#001F2A</color>
+    <color name="md_theme_dark_inverseSurface">#BFE9FF</color>
+    <color name="md_theme_dark_inversePrimary">#4355B9</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#BAC3FF</color>
+    <color name="md_theme_dark_outlineVariant">#46464F</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 </resources>
